--- a/Exercício/estilo.css
+++ b/Exercício/estilo.css
@@ -1,37 +1,67 @@
 body {
-  background-color: #002F2F; }
+  background-color: #002F2F; 
+}
+
+.container {
+  overflow: hidden;
+  display: none;
+}
 
 #cabecalho {
   background-color: #002F2F;
   text-align: center;
   color: #E6E2AF;
   padding-top: 1px;
-  font-family: 'Merriweather', serif; }
+  font-family: 'Merriweather', serif; 
+}
 
 #msg {
   background-color: #E6E2AF;
   text-align: left;
-  font-family: 'Open Sans Condensed', sans-serif; }
+  font-family: 'Open Sans Condensed', sans-serif;
+  padding-bottom: 323232px;
+  margin-bottom: -323232px;
+}
 
 #conteudo {
   background-color: #EFECCA;
   text-align: justify;
-  font-family: 'Open Sans Condensed', sans-serif; }
+  font-family: 'Open Sans Condensed', sans-serif; 
+  padding-bottom: 323232px;
+  margin-bottom: -323232px;
+}
 
 .foto {
   width: 80px;
   height: 80px;
   margin-bottom: 8px;
-  border-radius: 40px 40px 50px 50px; }
+  border-radius: 40px 40px 50px 50px; 
+}
+
 #campo {
   text-align: justify;
   margin: auto;
   padding: auto;
   border: 2px solid black;
   border-radius: 0px 30px 0px 30px;
-  background-color: white; }
+  background-color: white;
+}
 
 .mensagem {
   text-align: center;
   margin: 10px 80px 0px 80px;
-  padding: 2px; }
+  padding: 2px; 
+}
+
+.label {
+  margin-right: 10px;
+}
+
+.progress {
+  margin: 40px;
+}
+
+.alert {
+  margin: 40px;
+  display: none;
+}
